syntax = "proto3";

option java_multiple_files = true;
option objc_class_prefix = "HLW";

package pipelinescheduler;

// The service definition.
service DataTransferService {
  rpc GpuPointerTransfer (GpuPointerPayload) returns (SimpleConfirm) {}
  rpc SharedMemTransfer (SharedMemPayload) returns (SimpleConfirm) {}
  rpc SerializedDataTransfer (SerializedDataPayload) returns (SimpleConfirm) {}
}

message ImageData {
  int32 width = 1;
  int32 height = 2;
  bytes data = 3;
}

message MemoryImageData {
  int32 width = 1;
  int32 height = 2;
  string name = 3;
}

message SerializedImageData {
  int32 width = 1;
  int32 height = 2;
  uint32 datalen = 3;
  bytes data = 4;
}

// The payload messages
message GpuPointerPayload {
  int64 timestamp = 1;
  uint32 slo = 2;
  string path = 3;

  repeated ImageData elements = 9;
}

message SharedMemPayload {
  int64 timestamp = 1;
  uint32 slo = 2;
  string path = 3;

  repeated MemoryImageData elements = 9;
}

message SerializedDataPayload {
  int64 timestamp = 1;
  uint32 slo = 2;
  string path = 3;

  repeated SerializedImageData elements = 9;
}


// The response message confirming transfer
message SimpleConfirm {
}
